<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize">
        <ImageView
            android:layout_width="197dp"
            android:layout_height="197dp"
            android:layout_gravity="center"
            android:layout_marginTop="110dp"
            android:contentDescription="@string/logo_name"
            android:src="@drawable/dtp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/logo_name"
            android:textSize="25sp"
            android:textColor="@color/dark_red"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/name"
            android:textSize="15sp"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="120dp"
            android:layout_gravity="center"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:background="@drawable/view_draw"
            />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:text="@string/btn_register"
            android:fontFamily="sans-serif"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="120dp"
            android:background="@drawable/view_draw"/>
    </LinearLayout>
</ScrollView>