<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize">

        <ImageButton
            android:id="@+id/btn_back1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="26dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="197dp"
            android:layout_height="197dp"
            android:layout_gravity="center"
            android:layout_marginTop="90dp"
            android:contentDescription="@string/logo_name"
            android:src="@drawable/dtp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_login"
            android:textColor="@color/dark_red"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp">

            <ImageView
                android:id="@+id/img_view1"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:src="@drawable/login"
                tools:ignore="ContentDescription" />

            <EditText
                android:layout_width="291dp"
                android:layout_height="wrap_content"
                android:text="@string/edit_txt1"
                tools:ignore="Autofill,LabelFor,TextFields" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/line2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/view_draw"
            android:layout_marginTop="10dp">
            <ImageView
                android:id="@+id/img_view2"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:src="@drawable/password"
                tools:ignore="ContentDescription" />
            <EditText
                android:layout_width="291dp"
                android:layout_height="wrap_content"
                android:text="@string/edit_txt2"
                tools:ignore="Autofill,LabelFor,TextFields" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:layout_gravity="center"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:background="@drawable/view_draw"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:text="@string/btn_forget"
            android:textColor="@color/black"
            android:layout_marginBottom="60dp"/>
        <LinearLayout
            android:id="@+id/line3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ask"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"/>

            <Button
                android:id="@+id/btn_register2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/btn_register"
                android:textColor="@color/dark_red"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>