<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageButton
            android:id="@+id/btn_back2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="26dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="ContentDescription" />
        <ImageView
            android:layout_width="197dp"
            android:layout_height="197dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/logo_name"
            android:src="@drawable/dtp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_register"
            android:textColor="@color/dark_red"
            android:textSize="25sp" />
        <LinearLayout
            android:id="@+id/line4"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp">

            <ImageView
                android:id="@+id/img_view3"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:src="@drawable/login"
                tools:ignore="ContentDescription" />

            <EditText
                android:layout_width="291dp"
                android:layout_height="wrap_content"
                android:text="@string/name_register"
                tools:ignore="Autofill,LabelFor,TextFields" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/line5"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/img_view4"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:src="@drawable/mail"
                tools:ignore="ContentDescription" />

            <EditText
                android:layout_width="291dp"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                tools:ignore="Autofill,LabelFor,TextFields" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/line6"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/img_view5"
                android:layout_width="42dp"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:src="@drawable/phone"
                tools:ignore="ContentDescription" />

            <EditText
                android:layout_width="291dp"
                android:layout_height="wrap_content"
                android:text="@string/sđt"
                tools:ignore="Autofill,LabelFor,TextFields" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="29dp"
            android:text="@string/attention"/>

        <LinearLayout
            android:id="@+id/line7"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/img_view6"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:src="@drawable/password"
                tools:ignore="ContentDescription" />

            <EditText
                android:layout_width="291dp"
                android:layout_height="wrap_content"
                android:text="@string/edit_txt2"
                tools:ignore="Autofill,LabelFor,TextFields" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/line8"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/img_view7"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:src="@drawable/password"
                tools:ignore="ContentDescription" />

            <EditText
                android:layout_width="291dp"
                android:layout_height="wrap_content"
                android:text="@string/re_pass"
                tools:ignore="Autofill,LabelFor,TextFields" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:text="@string/btn_register"
            android:fontFamily="sans-serif"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="120dp"
            android:background="@drawable/view_draw"/>
    </LinearLayout>

</ScrollView>